# paygap-compliance

./: .gitignore  AGENTS.md  README.md  app.py  broken.csv  broken_missing_salary.csv  other_dept.csv  pyproject.toml  requirements.txt  results.csv  sample_bc_payroll_12.csv  test_data.csv
compliance/: checklist.json
paygap_compliance/: main.py
paygap_compliance/routes/: __init__.py  report.py
paygap_compliance/services/: ledger_to_totals_transform.py  metrics.py  pdf.py  schema.py
paygap_core/: compliance.py
services/: __init__.py  metrics.py  schema.py
static/: style.css
static/templates/: bc_pay_template.csv
storage/public/reports/democo/2025/: audit.json  index.html
templates/: base.html  index.html  mapping_confirm.html  preview.html  privacy.html  report_bc.html  review.html  upload.html
tests/: test_metrics.py  test_pdf.py  test_report.py  test_schema.py  test_smoke.py  test_upload.py
uploads/: 20250810_224243_Sample_BC_Payroll__CSV____preview_1.csv  20250810_230157_BC_Payroll__360_employees____preview.csv  20250810_230441_bc_payroll_360.csv  20250819_143755_sample_bc_payroll_360.csv  demo.csv  demo_1.csv  full_test.csv  report_2025_20250810_224647.html  report_2025_20250810_224949.html  report_2025_20250810_230157.html  report_2025_20250810_230441.html  report_2025_20250819_140642.html  report_2025_20250819_142536.html
